[b]1.08[/b] (Aug 21, 2014)

*Adopted latest Azilroka's AddonSkins changes. Fixed Recount Decor.
*Added the ability to use different texture on unit power bars (Unitframe options).
*All new BenikUI features are now marked with a yellow "!".

[b]1.07[/b] (Aug 16, 2014)

*Added the ElvUI_BenikUI_Fonts folder missing from v1.06.

[b]1.06[/b] (Aug 16, 2014)

*Fixed the portrait issue with druid, mage, warlock or priest. All player portraits should detach now.
*Added option to change BenikUI XP and Rep bars colors.
*Added option to change the Dashboards fonts.
*Fixed a possible lua error when styling the bank frame.
*Fixed a possible lua error during the install.
*Styled the Copy Chat frame.

[b]1.05[/b] (May 21, 2014)

*Added an option that can show/hide the mail icon from the minimap (requires a reloadui).

[b]1.04[/b] (Apr 27, 2014)

*Changed position of the right chat buttons. "G" (Game menu) button is now on left and "C" (ElvUI config) button (aka "E") is now on the right. Also edited dropdown.lua, so that the menu position will not be related to mouse clicks. See dropmenu.lua in core folder.
*Removed the "C" button under the minimap. It's already at the bottomright chat corner. It will appear when BenikUI dataTexts are disabled.
*Added option to toggle BenikUI dataTexts transparency. Hmm.. they look nice without transparency :)
TODO: adopt BG dts

[b]1.03[/b] (Apr 21, 2014)

*Forgot to remove LootWonAlertFrame1 from skinning. Looks baaaad :P

[b]1.02[/b] (Apr 21, 2014)

*Added options to disable each of the Dashboards. Also can now be hidden while in combat.
*Added an option to apply transparency in actionbar dackdrops and actionbar buttons. My ElvUI_Transparent_AB plugin, in case is loaded, will be disabled.

[b]1.01[/b] (Apr 19, 2014)

*Added/changed stuff in the install routine.
*Added BenikUI style in some more frames and tabs.
*Changed the fonts addon a bit. More elegant now and added BenikUI font in Quest title.